InterneTaakAfhandeling.Web.Client/src/assets/main.scss
@use "sass:meta";
@use "@/assets/variables";

// Add project css to layers to be sure that the imported external tokens
// take highest precedence as they are loaded as unlayered css
@layer base, layout;

@layer base {
  @include meta.load-css("./design-tokens");
  @include meta.load-css("@utrecht/component-library-css");
}

@layer layout {
  :root {
    --breakpoint-md: #{variables.$breakpoint-md};
  }

  html,
  body,
  #app {
    height: 100%;
  }

  html {
    scroll-behavior: smooth;
  }

  body {
    margin: 0;
  }

  .visually-hidden {
    position: absolute !important;
    overflow: hidden;
    clip: rect(1px, 1px, 1px, 1px);
    width: 1px;
    height: 1px;
    word-wrap: normal;
  }

  .utrecht-textbox--html-input {
    block-size: 2.5rem; // date and text inputs are not the same height otherwise...
  }

  .preserve-newline {
    white-space: pre-line;
  }

  .ita-no-wrap {
    white-space: nowrap;
  }

  .ita-break-before-avoid {
    break-before: avoid;
  }

  // label for required text/date/textarea inputs
  .utrecht-form-field:has(:required:not([type="radio"], [type="checkbox"]))
  .utrecht-form-label::after,
  // legend for required radio / checkbox inputs
  .utrecht-form-fieldset:has(:is([type=radio], [type=checkbox]):required) .utrecht-form-fieldset__legend::after {
    content: " *";
  }
  .spinner-container {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 200px;
  }
}

